# death_warehouse

./: .gitignore  00_ApiRequest.py  00_RetrieveAutomaticFile.py  01.1_ParserINSEE_csv.py  01_ParserINSEE.py  Dockerfile  README.md  asgi.py  import_data.py  initial_import_data.py  manage.py  models.py  pyproject.toml  requirements.txt  settings.py  utils.py  views.py
automate_retrieve_INSEE_data/: universal_monthly_scheduler.py  use_instructions.md
automate_retrieve_INSEE_data/retrieve_insee_data/: 00_RetrieveAutomaticFile.py  01.1_ParserINSEE_csv.py  01_ParserINSEE.py  import_data.py  initial_import_data.py
death_warehouse_webapp/: check_data.py  date_control_insee.py  get_last_date.py  import_data.py  initial_import_data.py  manage.py  mydatabase  queries.py
death_warehouse_webapp/death_warehouse_app/: admin.py  apps.py  forms.py  log_utils.py  models.py  utils.py  views.py
death_warehouse_webapp/death_warehouse_app/migrations/: 0001_initial.py  0002_recherchepatient_code_deces_and_more.py  0003_alter_recherchepatient_date_deces.py  0003_remove_recherchepatient_code_deces.py  0004_alter_recherchepatient_date_deces_and_more.py  0005_alter_recherchepatient_date_deces.py  0006_alter_recherchepatient_date_deces.py  0007_inseepatient_warehousepatient_and_more.py  0008_useractionlog.py
death_warehouse_webapp/death_warehouse_webapp/: asgi.py  settings.py  urls.py  wsgi.py
death_warehouse_webapp/static/css/: styles.css
death_warehouse_webapp/static/js/: custom.js
death_warehouse_webapp/static_root/css/: styles.css
death_warehouse_webapp/static_root/js/: custom.js
death_warehouse_webapp/templates/: friendly_error_page.html
death_warehouse_webapp/templates/death_warehouse_app/: home.html  import_error.html  import_file.html  log_stats.html  recherchepatient_list.html  template_de_confirmation.html  test.html  verification_results.html
