[project]
name = "death-warehouse"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = "~=3.12"

dependencies = [
    "loguru>=0.7.3",
]

[dependency-groups]
dev = [
    "ruff>=0, <1",
]

[tool.ruff]
line-length = 120
target-version = 'py312'

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "PTH",  # flake8-use-pathlib
    "UP",  # pyupgrade
    "FAST",  # fastapi
    "AIR",  # airflow
    "C90",  # mccabe complexity
    "ERA",  # eradicate
]
ignore = [
    "PTH123"  # use Path.open() instead of builtin open()
]
